--- a/chatApp/src/main/resources/view/MainView.fxml
+++ b/chatApp/src/main/resources/view/MainView.fxml
@@ -6,17 +6,20 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="687.0" prefWidth="687.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cn.edu.xmu.controller.sceneController">
+<AnchorPane prefHeight="687.0" prefWidth="687.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cn.edu.xmu.controller.SceneController">
    <children>
       <Button fx:id="connectButton" layoutX="577.0" layoutY="21.0" mnemonicParsing="false" onAction="#connect" prefHeight="30.0" prefWidth="79.0" text="连接" />
       <TextField fx:id="usernameTextField" layoutX="344.0" layoutY="21.0" />
       <Label layoutX="266.0" layoutY="26.0" text="用户名" />
-      <TextArea fx:id="chatRecord" layoutX="266.0" layoutY="143.0" prefHeight="351.0" prefWidth="396.0" />
-      <TextField fx:id="sendToTextField" layoutX="344.0" layoutY="97.0" />
+      <TextArea fx:id="chatRecord" layoutX="266.0" layoutY="144.0" prefHeight="351.0" prefWidth="396.0" />
+      <TextField fx:id="sendToUserTextField" layoutX="21.0" layoutY="63.0" />
       <Button fx:id="sendButton" layoutX="562.0" layoutY="503.0" mnemonicParsing="false" onAction="#send" prefHeight="172.0" prefWidth="104.0" text="发送" />
-      <Label layoutX="266.0" layoutY="102.0" text="发送给" />
       <TextArea fx:id="message" layoutX="266.0" layoutY="503.0" prefHeight="172.0" prefWidth="288.0" />
-      <ListView fx:id="messageList" layoutX="23.0" layoutY="144.0" prefHeight="526.0" prefWidth="229.0" />
-      <Label layoutX="21.0" layoutY="102.0" prefHeight="30.0" prefWidth="229.0" text="                   会话列表" />
+      <ListView fx:id="messageList" layoutX="23.0" layoutY="144.0" prefHeight="530.0" prefWidth="229.0" />
+      <Button layoutX="232.0" layoutY="63.0" mnemonicParsing="false" onAction="#addConnectUser" text="添加联系人" />
+      <Button layoutX="577.0" layoutY="63.0" mnemonicParsing="false" onAction="#addConnectGroup" text="加入群聊" />
+      <Label layoutX="449.0" layoutY="107.0" text="消息" />
+      <TextField fx:id="sendToGroupTextField" layoutX="344.0" layoutY="63.0" />
+      <Label layoutX="108.0" layoutY="107.0" text="会话列表" />
    </children>
 </AnchorPane>
