--- a/chatApp/src/main/resources/view/MainView.fxml
+++ b/chatApp/src/main/resources/view/MainView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
@@ -13,13 +14,16 @@
       <Label layoutX="266.0" layoutY="26.0" text="用户名" />
       <TextArea fx:id="chatRecord" layoutX="266.0" layoutY="144.0" prefHeight="351.0" prefWidth="396.0" />
       <TextField fx:id="sendToUserTextField" layoutX="21.0" layoutY="63.0" />
-      <Button fx:id="sendButton" layoutX="562.0" layoutY="503.0" mnemonicParsing="false" onAction="#send" prefHeight="172.0" prefWidth="104.0" text="发送" />
-      <TextArea fx:id="message" layoutX="266.0" layoutY="503.0" prefHeight="172.0" prefWidth="288.0" />
+      <Button fx:id="sendButton" layoutX="562.0" layoutY="503.0" mnemonicParsing="false" onAction="#send" prefHeight="81.0" prefWidth="104.0" text="发送" />
+      <TextArea fx:id="message" layoutX="266.0" layoutY="503.0" prefHeight="81.0" prefWidth="288.0" />
       <ListView fx:id="messageList" layoutX="23.0" layoutY="144.0" prefHeight="530.0" prefWidth="229.0" />
       <Button layoutX="232.0" layoutY="63.0" mnemonicParsing="false" onAction="#addConnectUser" text="添加联系人" />
       <Button layoutX="577.0" layoutY="63.0" mnemonicParsing="false" onAction="#addConnectGroup" text="加入群聊" />
       <Label layoutX="449.0" layoutY="107.0" text="消息" />
       <TextField fx:id="sendToGroupTextField" layoutX="344.0" layoutY="63.0" />
       <Label layoutX="108.0" layoutY="107.0" text="会话列表" />
+      <Button layoutX="266.0" layoutY="584.0" mnemonicParsing="false" onAction="#selectFile" prefHeight="30.0" prefWidth="288.0" text="选择文件" />
+      <Button layoutX="563.0" layoutY="626.0" mnemonicParsing="false" onAction="#sendFile" prefHeight="30.0" prefWidth="104.0" text="发送文件" />
+      <Label fx:id="fileNameLabel" layoutX="266.0" layoutY="626.0" prefHeight="30.0" prefWidth="288.0" />
    </children>
 </AnchorPane>
