--- a/chatApp/src/main/resources/view/MainView.fxml
+++ b/chatApp/src/main/resources/view/MainView.fxml
@@ -10,8 +10,8 @@
 <AnchorPane prefHeight="687.0" prefWidth="687.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cn.edu.xmu.controller.SceneController">
    <children>
       <Button fx:id="connectButton" layoutX="577.0" layoutY="21.0" mnemonicParsing="false" onAction="#connect" prefHeight="30.0" prefWidth="79.0" text="连接" />
-      <TextField fx:id="usernameTextField" layoutX="344.0" layoutY="21.0" />
-      <Label layoutX="266.0" layoutY="26.0" text="用户名" />
+      <TextField fx:id="usernameTextField" layoutX="406.0" layoutY="21.0" prefHeight="30.0" prefWidth="140.0" />
+      <Label layoutX="344.0" layoutY="26.0" text="用户名" />
       <TextArea fx:id="chatRecord" layoutX="266.0" layoutY="144.0" prefHeight="351.0" prefWidth="396.0" />
       <TextField fx:id="sendToUserTextField" layoutX="21.0" layoutY="63.0" />
       <Button fx:id="sendButton" layoutX="562.0" layoutY="503.0" mnemonicParsing="false" onAction="#send" prefHeight="81.0" prefWidth="104.0" text="发送" />
@@ -25,5 +25,7 @@
       <Button layoutX="266.0" layoutY="626.0" mnemonicParsing="false" onAction="#selectFile" prefHeight="30.0" prefWidth="288.0" text="选择文件" />
       <Button layoutX="563.0" layoutY="626.0" mnemonicParsing="false" onAction="#sendFile" prefHeight="30.0" prefWidth="104.0" text="发送文件" />
       <Label fx:id="fileNameLabel" layoutX="266.0" layoutY="626.0" prefHeight="30.0" prefWidth="288.0" />
+      <ChoiceBox fx:id="transChoice" layoutX="73.0" layoutY="21.0" prefWidth="150.0" />
+      <Label layoutX="21.0" layoutY="26.0" text="翻译" />
    </children>
 </AnchorPane>
